67 percent. long tail. I am going to have to refactor now that I know charges are ordered

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 autoblazon = {path = ".",editable = true}
 ipython = "*"
 lark-parser = "*"
+pudb = "*"
 
 [requires]
 python_version = "3.7"
